update welcome message

--- a/Pages/Index.cshtml
+++ b/Pages/Index.cshtml
@@ -5,5 +5,5 @@
 }
 
 <div class="text-center">
-    <h1 class="display-4">Welcome To Azure app services - vs2026 community deployment</h1>
+    <h1 class="display-4">Welcome To Azure app services - Github Actions In Effect</h1>
 </div>
